--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   Hello World!
+  <div id="george">
+    <div></div>
+  </div>
 </body>
+
 </html>
